[package]
name = "yurt"
version = "0.8.0-dev"
authors = ["Julian Thomassie <julianthomassie@gmail.com>"]
repository = "https://github.com/jcthomassie/yurt"
description = "Simple CLI tool for dotfile management."
readme = "README.md"
license-file = "LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
console = "0.15.8"
dirs = "5.0.1"
env_logger = "0.11.3"
git2 = "0.18.3"
indexmap = { version = "2.2.6", features = ["serde"] }
indicatif = "0.17.8"
lazy_static = "1.4.0"
log = "0.4.21"
minreq = { version = "2.11.2", features = ["https-rustls"] }
regex = "1.10.4"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_yaml = "0.9.34"
symlink = "0.1.0"
whoami = "1.5.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.10.1"

[profile.release]
strip = true
lto = true
opt-level = "z"
