[package]
name = "yurt"
version = "0.8.0-dev"
authors = ["Julian Thomassie <julianthomassie@gmail.com>"]
repository = "https://github.com/jcthomassie/yurt"
description = "Simple CLI tool for dotfile management."
readme = "README.md"
license-file = "LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["cargo", "derive"] }
console = "0.15.7"
dirs = "5.0.1"
git2 = "0.18.1"
indexmap = { version = "2.0.2", features = ["serde"] }
indicatif = "0.17.7"
lazy_static = "1.4.0"
minreq = { version = "2.10.0", features = ["https-rustls"] }
regex-lite = "0.1.5"
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"
symlink = "0.1.0"
whoami = "1.4.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.8.0"

[profile.release]
strip = true
lto = true
opt-level = "z"
