[package]
name = "yurt"
version = "0.8.0-dev"
authors = ["Julian Thomassie <julianthomassie@gmail.com>"]
repository = "https://github.com/jcthomassie/yurt"
description = "Simple CLI tool for dotfile management."
readme = "README.md"
license-file = "LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["cargo", "derive"] }
dirs = "5.0.1"
env_logger = "0.11.3"
git2 = "0.18.2"
indexmap = { version = "2.0.0", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.17"
minreq = { version = "2.10.0", features = ["https-rustls"] }
regex = "1.7.1"
semver = { version = "1.0.16", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
symlink = "0.1.0"
whoami = "1.3.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
tempfile = "3.3.0"

[profile.release]
strip = true
lto = true
opt-level = "z"
